@@ -1,6 +1,7 @@
 2005-12-08  Matthias Wimmer  <m@tthias.net>
 
     * jabberd/config.c: Generate warning: diff namespaces when include
+    * jabberd/jabberd.c: use libpopt for commandline parsing
 
 2005-12-06  Matthias Wimmer  <m@tthias.net>
 
